Issue #9277: Struct module: standard bool packing was incorrect if char is unsigned.  Thanks Stefan Krah for the patch.